add videojs webpage

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,27 @@ rtmp {
     server {
         listen 1935;
         listen [::]:1935 ipv6only=on;    
-
+        chunk_size 3000;
+        buflen 1s;
         application live {
             live on;
             record off;
+            hls on;
+            hls_path /tmp/hls/live;
+            hls_fragment 600ms;
+            hls_playlist_length 3s;
         }
     }
+}
+
+http {
+    server {
+        listen 80;
+        listen [::]:80 ipv6only=on;
+        root /var/www/html;
+        location /live/ {
+            root /tmp/hls;
+        }
+    }
+
 }
